# LegoLoco

./: .gitignore  CMakeLists.txt  Makefile  ToDo.md  readme.md
.github/workflows/: build.yml
saves/: world.json
src/: Building.cpp  Building.h  Camera.h  PathGraph.cpp  PathGraph.h  Placeable.h  SaveFileHandler.cpp  SaveFileHandler.h  Tile.cpp  Tile.h  World.cpp  World.h  game.cpp
tools/: pink_to_transparent.py  rf-extract.py
